--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,11 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.kotcrab.vis:vis-ui:$visuiVersion"
         compile "com.badlogicgames.gdx:gdx-freetype:$freeTypeVersion"
+//        compile "org.apache.hadoop:hadoop-common:3.1.1"
+//        compile "org.xerial.snappy:snappy-java:1.1.7.2"
+//        compile "org.apache.commons:commons-compress:1.18"
+//        compile "org.anarres.lzo:lzo-core:1.0.6"
+//        compile "net.jpountz.lz4:lz4:1.3.0"
         compile fileTree(dir: '../core/libs', include: '*.jar')
     }
 }
